test/spec_vectors/func/fail/module_46.wat
(module (func $type-return-void-vs-num (result i32) (return (nop)) (i32.const 1)))